--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name" : "apereo/phpcas",
+	"name" : "timmy78/phpcas",
 	"description" : "Provides a simple API for authenticating users against a CAS server",
 	"keywords" : [
 		"cas",
@@ -51,5 +51,10 @@
 		"branch-alias" : {
 			"dev-master" : "1.3.x-dev"
 		}
+	},
+	"config": {
+	    "allow-plugins": {
+	      "pestphp/pest-plugin": true
+	    }
 	}
 }
